--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<!DOCTYPE html>
+<link href="style.css" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display:400,900,700' rel='stylesheet' type='text/css'>
+<head>
+	<title>Welcome to ME!</title>
+		<link rel="shortcut icon" href="http://2.bp.blogspot.com/-V7Ui2zipbM8/VkJ9MGDNMRI/AAAAAAACXY8/dKxLtH_pU1o/s1600/favicon.ico">
+</head>
+<style>
+img { 
+	margin-top: 75px;
+	margin-bottom: 75px;
+	position: center;
+}
+</style>
+<body>
+<script>
+function myFunction() {
+    window.open("pop up.html", "_blank", "toolbar=yes, scrollbars=yes, resizable=yes, top=500, left=500, width=400, height=400");
+}
+</script>
+	<li><a href="launch.html"><img src= "http://2.bp.blogspot.com/-akBKjHc4Zfw/VkJ9Kzai37I/AAAAAAACXYI/TeXEmSR6Bi4/s1600/Landing-click.Welcome-To-Me.png"resizable=yes, width=700, height=500"></a></li>
+</body>
