--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
-<link href="style.css" rel="stylesheet">
-<link href='https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display:400,900,700' rel='stylesheet' type='text/css'>
+<html>
 <head>
-	<title>Welcome to ME!</title>
-		<link rel="shortcut icon" href="http://2.bp.blogspot.com/-V7Ui2zipbM8/VkJ9MGDNMRI/AAAAAAACXY8/dKxLtH_pU1o/s1600/favicon.ico">
-</head>
-<style>
-img { 
-	margin-top: 75px;
-	margin-bottom: 75px;
-	position: center;
-}
-</style>
-<body>
-<script>
-function myFunction() {
-    window.open("pop up.html", "_blank", "toolbar=yes, scrollbars=yes, resizable=yes, top=500, left=500, width=400, height=400");
-}
-</script>
-	<li><a href="launch.html"><img src= "http://2.bp.blogspot.com/-akBKjHc4Zfw/VkJ9Kzai37I/AAAAAAACXYI/TeXEmSR6Bi4/s1600/Landing-click.Welcome-To-Me.png"resizable=yes, width=700, height=500"></a></li>
-</body>
+	<title>Farishta Haider</title>
+	<link rel="shortcut icon" href="http://2.bp.blogspot.com/-V7Ui2zipbM8/VkJ9MGDNMRI/AAAAAAACXY8/dKxLtH_pU1o/s1600/favicon.ico">
+  <link href="stylesheet.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display:400,900,700' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+<h1> Welcome to the wonderful world of Farishta Haider</h1>
+<ul id="tabs">
+    <li class="active">Home</li>
+    <li>About Me</li>
+    <li>Marketing Portfolio</li>
+    <li>Programming Portfolio</li>
+    <li>Contact Me</li>
+  </body>
+</html>
