--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   </head>
   <body>
 <h1> Welcome to the wonderful world of Farishta Haider</h1>
-<ul id="tabs">
-    <li class="active">Home</li>
-    <li>About Me</li>
-    <li>Marketing Portfolio</li>
-    <li>Programming Portfolio</li>
-    <li>Contact Me</li>
-  </body>
+
 </html>
+<div button id="nav">
+		<button type="button"><a href="">Home</a></button>
+		<button type="button"><a href="">About Me</a></button>
+		<button type="button"><a href="">Marketing Portfolio</a></button>
+		<button type="button"><a href="">Programming Portfolio</a></button>
+		<button type="button"><a href="">Contact Me</a></button>
+</div>
+  </body>
+	</html>
