--- a/about_me.html
+++ b/about_me.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-	<h1> Welcome to the wonderful world of Farishta Haider</h1>
+	<h1> About Me</h1>
 
 	<div button id="nav">
 		<button type="button"><a href="index.html">Home</a></button>
