changed nav bar

--- a/index.html
+++ b/index.html
@@ -3,15 +3,35 @@
 <head>
 	<title>Farishta Haider</title>
   <link rel="stylesheet" type="text/css" href="style.css"/>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </head>
+<header>
+	<div class="headerimg"></div>
+</header>
 <body>
-	<h1> Welcome to the wonderful world of Farishta Haider</h1>
+	<h1> hello world</h1>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
-	<div button id="nav">
-		<button type="button"><a href="index.html">Home</a></button>
-		<button type="button"><a href="about_me.html">About Me</a></button>
-		<button type="button"><a href="portfolio.html">Portfolio</a></button>
-		<button type="button"><a href="contact_me.html">Contact Me</a></button>
-	</div>
-	</body>
+	<div id="nb"></div>
+	<section>
+		<nav>
+			<div></div>
+			<!-- <div class="container" id="nav">
+			<nav class="nav"> -->
+
+			<ul>
+				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="about_me.html">About Me</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="contact_me.html">Contact Me</a></li>
+			</ul>
+		</nav>
+	</section>
+</body>
 </html>
+
+<!-- <li data-xcoord="0px" class="active">Home</li>
+<li data-xcoord="160px">About Me</li>
+<li data-xcoord="320px">Portfolio</li>
+<li data-xcoord="480px">Contact Me</li> -->
