--- a/contact_me.html
+++ b/contact_me.html
@@ -6,12 +6,26 @@
 </head>
 <body>
 	<h1> Contact Me</h1>
+	<div id="nb"></div>
+	<section>
+		<nav>
+			<div></div>
+			<!-- <div class="container" id="nav">
+			<nav class="nav"> -->
 
-	<div button id="nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="about_me.html">About Me</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li class="active"><a href="contact_me.html">Contact Me</a></li>
+			</ul>
+		</nav>
+	</section>
+	<!-- <div button id="nav">
 		<button type="button"><a href="index.html">Home</a></button>
 		<button type="button"><a href="about_me.html">About Me</a></button>
 		<button type="button"><a href="portfolio.html">Portfolio</a></button>
 		<button type="button"><a href="contact_me.html">Contact Me</a></button>
-	</div>
+	</div> -->
 	</body>
 </html>
