--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html>
 <head>
 	<title>Farishta Haider</title>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
+	<link rel="shortcut icon" href="favicon.ico" />
+
+
 </head>
 <header>
 	<div class="headerimg"></div>
 </header>
 <body>
-	<h1> hello world</h1>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<h1> Farishta Haider</h1>
+
 
 	<div id="nb"></div>
 	<section>
