Working on the portfolio gallery to have interaction slide/flip animation

--- a/about_me.html
+++ b/about_me.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<title>Farishta Haider</title>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="style.css.scss"/>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
+	<link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 	<h1> About Me</h1>
@@ -16,6 +19,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li class="active"><a href="about_me.html">About Me</a></li>
+				<li><a href="resume.html">Resume</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="contact_me.html">Contact Me</a></li>
 			</ul>
@@ -27,5 +31,23 @@
 		<button type="button"><a href="portfolio.html">Portfolio</a></button>
 		<button type="button"><a href="contact_me.html">Contact Me</a></button>
 	</div> -->
+
+	<article>
+<h2>Personal Life</h2>
+<img src="http://2.bp.blogspot.com/-yLamqtRD5Fw/VkJ9KhdB6PI/AAAAAAACXYM/ITq72-kZFQI/s1600/IMG_20120514_222129.jpg" height= "400px" width="500px">
+<p>I was born in Kabul, Afghanistan on May 25, 1981. 3 short months later, my family and I became refugees and moved to several locations before settling down in Hessen, Germany. At the early age of 3, we moved to Oxen Hill, MD to live the american dream. I graduated Bowie High School in 1999 and University of Maryland, College Park with a Bachelors in Arts & Humanities in 2004. Shortly before I graduated college, my mother passed away from melinma. Luckily, I still have my older sister, younger brother, father and we have a stepmother now. As many foreign families, we have a lot of family members. I love my cousins and we stay close. I currently reside in Crofton, MD with no kids or husband and I love it.</p>
+
+</br>
+  <h2>Professional Career</h2>
+  <img src="http://4.bp.blogspot.com/-oGAmL3CjHDU/VkJ9ILe2B_I/AAAAAAACXXg/0ytveRy3t2o/s320/10846241_10153432424613902_3216655298360800748_n.jpg">
+  <p>Fresh out of college, I worked at Summit Marketing. A Promotional product marketing company in Silver Spring, MD. I worked on a team that managed programs and my account was GEICO. I did promotional product research, managed custom orders, managed the inventory and the reporting. After over 3 years I moved on to GEICO. My dream job at that time. </p>
+</br>
+	<p>At GEICO, I worked on the event marketing team and was a jack of all trades. I preformed every function on the team, from managing the $22 Million budget to getting in that horrible gecko costume. The tasks that I loved most were the ones that allowed me to be creative. That lead to an interest in graphic design. I self taught myself and like to create designs for myself in my free time. After over 7 years, I was decided to move on from GEICO. I knew all there was to know and wasn't learning anything new and felt stagnant. My last day at GEICO was Feb 27, 2015. </P>
+
+ <p>Since GEICO, I have been working as a consultant at a new marketing company, <a href="http://montagemarketinggroup.com/" target="_blank">Montage Marketing.</a> I have been working on their social media, digital marketing and graphic design. However, I am just doing this work for fun and to learn some new skillsets. </p>
+</br>
+ <h2> What is next for me? Web Development!</h2>
+</article>
+
 	</body>
 </html>
