--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 	<link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
-	<h1> Contact Me</h1>
+	<h1>Resume</h1>
 	<div id="nb"></div>
 	<section>
 		<nav>
@@ -19,24 +19,19 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about_me.html">About Me</a></li>
-				<li><a href="resume.html">Resume</a></li>
+				<li class="active"><a href="resume.html">Resume</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
-				<li class="active"><a href="contact_me.html">Contact Me</a></li>
+				<li><a href="contact_me.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</section>
+
+	<h2> Insert Image of resume </h2>
 	<!-- <div button id="nav">
 		<button type="button"><a href="index.html">Home</a></button>
 		<button type="button"><a href="about_me.html">About Me</a></button>
 		<button type="button"><a href="portfolio.html">Portfolio</a></button>
 		<button type="button"><a href="contact_me.html">Contact Me</a></button>
 	</div> -->
-
-	<div class="contact">
-	<p>Thank you for visiting my site. Please fill out the form to contact me
-<span>|</span></p>
-</div>
-
-
 	</body>
 </html>
