--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Farishta Haider</title>
-	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="style.css.scss"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<link rel="shortcut icon" href="favicon.ico" />
@@ -16,12 +16,11 @@
 	<section>
 		<nav>
 			<div></div>
-			<!-- <div class="container" id="nav">
-			<nav class="nav"> -->
 
 			<ul>
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="about_me.html">About Me</a></li>
+				<li><a href="resume.html">Resume</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="contact_me.html">Contact Me</a></li>
 			</ul>
