--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 	<title>Farishta Haider</title>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="style.css.scss"/>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
+	<link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
 	<h1>Portfolio</h1>
@@ -16,6 +19,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about_me.html">About Me</a></li>
+				<li><a href="resume.html">Resume</a></li>
 				<li class="active"><a href="portfolio.html">Portfolio</a></li>
 				<li><a href="contact_me.html">Contact Me</a></li>
 			</ul>
@@ -27,5 +31,20 @@
 		<button type="button"><a href="portfolio.html">Portfolio</a></button>
 		<button type="button"><a href="contact_me.html">Contact Me</a></button>
 	</div> -->
+Portfolio Gallery
+
+<div class="container">
+	<div class="card">
+		<p class="back">Back</p>
+		<h3 class="headline">Oh welcome</h3>
+		<p class="welcometext">Here you can pickup you're next coding challenge! just choose one of your liking and prevail! <span>Good luck coder!<span></p>
+			<p class="grats"></p>
+			<p class="download" onClick="hiddenElement">Download your challenge as .txt</p>
+		<div class="btn start">Lets get going!</div>
+		<div class="btn accept">Oh yes i accept!</div>
+		<div class="btn decline">Meh new one please</div>
+	</div>
+</div>
+
 	</body>
 </html>
