Adding social links

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,13 +36,13 @@ Portfolio Gallery
 <div class="container">
 	<div class="card">
 		<p class="back">Back</p>
-		<h3 class="headline">Oh welcome</h3>
-		<p class="welcometext">Here you can pickup you're next coding challenge! just choose one of your liking and prevail! <span>Good luck coder!<span></p>
+		<h3 class="headline">Headline</h3>
+		<p class="welcometext">Words<span>More Words<span></p>
 			<p class="grats"></p>
-			<p class="download" onClick="hiddenElement">Download your challenge as .txt</p>
-		<div class="btn start">Lets get going!</div>
-		<div class="btn accept">Oh yes i accept!</div>
-		<div class="btn decline">Meh new one please</div>
+			<p class="download" onClick="hiddenElement">More Words</p>
+		<div class="btn start">Start</div>
+		<div class="btn accept">View more</div>
+		<div class="btn decline">no go on</div>
 	</div>
 </div>
 
