--- a/index.html
+++ b/index.html
@@ -4,32 +4,36 @@
 	<title>Farishta Haider</title>
 	<link rel="stylesheet" type="text/css" href="style.css.scss"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="http://cristykoebler.com/jquery_plugins/grid/modernizr.custom.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 	<link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
-	<div class="headerimg"></div>
-	<h1> Farishta Haider</h1>
+	<header>
+		<section class="intro">
+			<div id="top">
+			<div class="headerimg"></div>
+			<h1> Farishta Haider</h1>
+</div>
 
-
-	<div id="nb"></div>
-	<section>
-		<nav>
-			<div></div>
-
-			<ul>
-				<li class="active"><a href="index.html">Home</a></li>
-				<li><a href="about_me.html">About Me</a></li>
-				<li><a href="resume.html">Resume</a></li>
-				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="contact_me.html">Contact Me</a></li>
-			</ul>
-		</nav>
+			<div id="navbar"></div>
+			<nav>
+				<div></div>
+				<ul>
+					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="about_me.html">About Me</a></li>
+					<li><a href="resume.html">Resume</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact_me.html">Contact Me</a></li>
+				</ul>
+			</nav>
+		</header>
 	</section>
+	<section class="aboutme">
+
+</section>
+
+
+
 </body>
 </html>
-
-<!-- <li data-xcoord="0px" class="active">Home</li>
-<li data-xcoord="160px">About Me</li>
-<li data-xcoord="320px">Portfolio</li>
-<li data-xcoord="480px">Contact Me</li> -->
