changed layout and added gif image

--- a/index.html
+++ b/index.html
@@ -2,38 +2,150 @@
 <html>
 <head>
 	<title>Farishta Haider</title>
-	<link rel="stylesheet" type="text/css" href="style.css.scss"/>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="http://cristykoebler.com/jquery_plugins/grid/modernizr.custom.js"></script>
-	<script type="text/javascript" src="script.js"></script>
+	<link rel="stylesheet" type="text/css/scss" href="/stylesheets/style.css.scss"/>
+
 	<link rel="shortcut icon" href="favicon.ico" />
+	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
+	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="stylesheets/animate.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
 </head>
+
+
+
+
+
 <body>
-	<header>
-		<section class="intro">
-			<div id="top">
-			<div class="headerimg"></div>
-			<h1> Farishta Haider</h1>
+	<!-- <header class="topnav">
+	<div class="logo">
+	<h1> Farishta Haider </h1>
 </div>
 
-			<div id="navbar"></div>
-			<nav>
-				<div></div>
-				<ul>
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="about_me.html">About Me</a></li>
-					<li><a href="resume.html">Resume</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="contact_me.html">Contact Me</a></li>
-				</ul>
+</header>  -->
+
+<section id="welcome">
+
+	<!-- Right menu element-->
+	<header class="close">
+		<nav>
+			<div class="relative">
+				<div class="bg"></div>
+				<div class="holder">
+					<a href="#welcome">Home</a>
+					<a href="#about">About Me</a>
+					<a href="#resume">Resume</a>
+					<a href="#portfolio">Portfolio</a>
+					<a href="#contactMe">Contact Me</a>
+				</div>
 			</nav>
-		</header>
+			<div class="nav-bar">
+				<div class="overlay">
+					<div class="toggle-bar">
+					</div>
+				</div>
+			</div>
+		</div>
+	</header>
+	<div class="welcome">
+		<!-- <div class="background"> -->
+		<!-- <h1 class="">OVERLAY TEXT</h1> -->
+
+		<i class="logo fade-in one"></i>
+		<h1 class="fade-in two">Hello <strong>World</strong></h1>
+		<p class="fade-in three" "text"><strong>I</strong> am <strong>Farishta Haider</strong>
+			<!-- </div> -->
+			<!-- <div class="intro">
+			<h2>
+
+			<span class="rotate-words">
+			<span class="rotate-in active">web development.</span>
+			<span class="rotate-out">tech.</span>
+			<span class="rotate-out">pop culture.</span>
+			<span class="rotate-out">marketing.</span>
+			<span class="rotate-out">music.</span>
+			<span class="rotate-out">social media.</span>
+		</span>
+	</h2>
+</div> -->
+<!-- Take a look at some of my works, and if you like them, feel free to <strong>contact me</strong>.<br> Let’s create something <strong>WOW!</strong></p> -->
+<p><a href="#portfolio" class="button fade-in four">View My Works</a></p>
+<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i></div>
+</div>
+</section>
+<section id="about">
+	<div class="bg-image"></div>
+	<div class="holder">
+		<div class="title scrollflow -slide-top -opacity"><h2>About</h2></div>
+		<div id="tabs-container">
+			<ul class="tabs-menu title scrollflow -slide-top -opacity">
+				<li class="current"><a href="#about">About Me</a></li>
+				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#resume">Resume</a></li>
+			</ul>
+			<div class="tab">
+				<aside class="bio tab-content scrollflow -slide-right -opacity" id="bio" >
+					<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
+
+					<div class="links scrollflow"><a href="resume" target="_blank" class="button"><i class="fa fa-download"></i> Download</a>
+						<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a></div>
+					</aside>
+						<aside>
+<div class="headerimg"></div>
+</aside>
+				</div>
+			</div>
+		</div>
 	</section>
-	<section class="aboutme">
+	<section id="portfolio">
+		<div class="holder">
+			<div class="title scrollflow -slide-top -opacity"><h2>Portfolio</h2></div>
+		</br>
+		<a href="http://lafrish.github.io/Trivia_Night/"></a>
+		<a href="http://cheerie.herokuapp.com/"></a>
+		<a href="https://icare-volunteer-app.herokuapp.com/"></a>
+	</section>
+
+</br>
+</section>
+</br>
+<section id="resume">
+	<div class="holder">
+		<div class="title scrollflow -slide-top -opacity"><h2>Resume</h2></div>
+	</br>
+</br>
 
 </section>
+<section id="contactMe">
+	<div class="holder">
+		<div class="title scrollflow -slide-top -opacity"><h2>Contact Me</h2></div>
 
 
-
+		<div class="contact-info">
+			<div class="mail"><a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com"><i class="fa fa-envelope"></i> farishta.haider@gmail.com</a></div>
+			<div class="tel"><i class="fa fa-mobile"></i> <strong> 301 - 509 - 2483</strong></div>
+		</div>
+		<div class="social">
+			<a href="https://www.behance.net/LaFrish" target="_blank"><i class="fa fa-behance"></i></a>
+			<a href="https://github.com/LaFrish" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
+			</a>
+			<a href="https://www.linkedin.com/in/farishtahaider" target="_blank"><i class="fa fa-linkedin"></i></a>
+			<a href="https://www.facebook.com/farishta.haider" target="_blank"><i class="fa fa-facebook"></i></a>
+			<a href="https://twitter.com/lafrish" target="_blank"><i class="fa fa-twitter"></i></a>
+			<a href="https://plus.google.com/u/0/115133210735023070083/posts" target="_blank"><i class="fa fa-google-plus"></i></a>
+		</div>
+		<a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com" class="button">Get in touch</a>
+		<div class="copy">© Copyright 2016 Farishta Haider Portfolio</div>
+	</div>
+</section>
+<footer></footer>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="/javascript/modernizr.custom.js"></script>
+<script type="text/javascript" src="/javascript/script.js"></script>
+<script type="text/javascript" src="javascripts/html5shiv-printshiv.js"></script>
+<script type="text/javascript" src="javascripts/jquery.js"></script>
+<script src="javascripts/jquery.scrollflow.min.js"></script>
+<script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
+<script src="javascripts/jquery.bxslider.min.js"></script>
 </body>
 </html>
