Fixed gif location

--- a/index.html
+++ b/index.html
@@ -88,9 +88,11 @@
 					<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
 
 					<div class="links scrollflow"><a href="resume" target="_blank" class="button"><i class="fa fa-download"></i> Download</a>
-						<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a></div>
+						<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-thumbs-up"></i> Hire Me</a></div>
 					</aside>
 						<aside>
+
+
 <div class="headerimg"></div>
 </aside>
 				</div>
@@ -112,8 +114,7 @@
 <section id="resume">
 	<div class="holder">
 		<div class="title scrollflow -slide-top -opacity"><h2>Resume</h2></div>
-	</br>
-</br>
+
 
 </section>
 <section id="contactMe">
