added timeline frame

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Farishta Haider</title>
-	<link rel="stylesheet" type="text/css/scss" href="/stylesheets/style.css.scss"/>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css.scss"/>
 
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
@@ -88,7 +88,7 @@
 					<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
 
 					<div class="links scrollflow"><a href="resume" target="_blank" class="button"><i class="fa fa-download"></i> Download</a>
-						<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-thumbs-up"></i> Hire Me</a></div>
+						<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a></div>
 					</aside>
 						<aside>
 
@@ -103,9 +103,13 @@
 		<div class="holder">
 			<div class="title scrollflow -slide-top -opacity"><h2>Portfolio</h2></div>
 		</br>
-		<a href="http://lafrish.github.io/Trivia_Night/"></a>
-		<a href="http://cheerie.herokuapp.com/"></a>
-		<a href="https://icare-volunteer-app.herokuapp.com/"></a>
+		<a href="http://lafrish.github.io/Trivia_Night/"><img src="http://i.imgur.com/0JgJmIjh.png" alt="Trivia Night Game"></a>
+		<a href="http://cheerie.herokuapp.com/"><img src="http://i.imgur.com/pT8gS04h.png" alt="Cheerie App"></a>
+		<a href="https://icare-volunteer-app.herokuapp.com/"><img src="http://i.imgur.com/c4aHeqdh.jpg" alt="iCare App"></a>
+		<a href=""><img src="http://i.imgur.com/hqWOJhwh.png" alt="Node Beach House"></a>
+<a href="https://wdi8-yearbook.herokuapp.com/"><img src="http://www.educationpost.com.hk/sites/default/files/images/logo/institution/1ga_logo.jpg" alt="General Assembly's WDI 8 Yearbook"></a>
+
+
 	</section>
 
 </br>
@@ -114,7 +118,48 @@
 <section id="resume">
 	<div class="holder">
 		<div class="title scrollflow -slide-top -opacity"><h2>Resume</h2></div>
-
+	</br>
+</br>
+<div class="wrapper">
+  <div class="timeline"></div>
+  <div class="momentscontainer">
+    <div class="moment right">
+      <div class="date">
+        <h4>January 2014</h4>
+      </div>
+      <h2 class="name">Name of Significant Event in Time</h2>
+      <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique commodi labore, mostiae! Rem error, magni ut molestias fuga nemo.</p>
+    </div>
+    <div class="moment left">
+      <div class="date">
+        <h4>February 2014</h4>
+      </div>
+      <h2 class="name">Name of Significant Event in Time</h2>
+      <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique commodi labore, mostiae! Rem error, magni ut molestias fuga nemo.</p>
+    </div>
+    <div class="moment right">
+      <div class="date">
+        <h4>March 2014</h4>
+      </div>
+      <h2 class="name">Name of Significant Event in Time</h2>
+      <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique commodi labore, mostiae! Rem error, magni ut molestias fuga nemo.</p>
+    </div>
+    <div class="moment left">
+      <div class="date">
+        <h4>April 2014</h4>
+      </div>
+      <h2 class="name">Name of Significant Event in Time</h2>
+      <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique commodi labore, mostiae! Rem error, magni ut molestias fuga nemo.</p>
+    </div>
+    <div class="moment right">
+      <div class="date">
+        <h4>May 2014</h4>
+      </div>
+      <h2 class="name">Name of Significant Event in Time</h2>
+      <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique commodi labore, mostiae! Rem error, magni ut molestias fuga nemo.</p>
+    </div>
+  </div>
+</div>
 
 </section>
 <section id="contactMe">
@@ -128,7 +173,7 @@
 		</div>
 		<div class="social">
 			<a href="https://www.behance.net/LaFrish" target="_blank"><i class="fa fa-behance"></i></a>
-			<a href="https://github.com/LaFrish" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
+			<a href="https://github.com/LaFrish" target="_blank"><i class="fa fa-github"></i>
 			</a>
 			<a href="https://www.linkedin.com/in/farishtahaider" target="_blank"><i class="fa fa-linkedin"></i></a>
 			<a href="https://www.facebook.com/farishta.haider" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -141,6 +186,7 @@
 </section>
 <footer></footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="/javascript/typekit.js"></script>
 <script type="text/javascript" src="/javascript/modernizr.custom.js"></script>
 <script type="text/javascript" src="/javascript/script.js"></script>
 <script type="text/javascript" src="javascripts/html5shiv-printshiv.js"></script>
