adding portfolio gallery

--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 <head>
 	<title>Farishta Haider</title>
-	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css.scss"/>
-
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css">
@@ -12,161 +10,181 @@
 	<link href="stylesheets/jquery.bxslider.css" rel="stylesheet">
 </head>
 
-
-
-
-
 <body>
-	<!-- <header class="topnav">
-	<div class="logo">
-	<h1> Farishta Haider </h1>
-</div>
-
-</header>  -->
-
-<section id="welcome">
-
-	<!-- Right menu element-->
-	<header class="close">
-		<nav>
-			<div class="relative">
-				<div class="bg"></div>
-				<div class="holder">
-					<a href="#welcome">Home</a>
-					<a href="#about">About Me</a>
-					<a href="#resume">Resume</a>
-					<a href="#portfolio">Portfolio</a>
-					<a href="#contactMe">Contact Me</a>
-				</div>
-			</nav>
-			<div class="nav-bar">
-				<div class="overlay">
+	<section id="welcome">
+		<header class="close">
+			<nav>
+				<div class="relative">
+					<div class="holder">
+						<a href="#welcome">Home</a>
+						<a href="#about">About Me</a>
+						<a href="#resume">Resume</a>
+						<a href="#portfolio">Portfolio</a>
+						<a href="#contactMe">Contact Me</a>
+					</div>
+				</nav>
+				<div class="nav-bar">
 					<div class="toggle-bar">
 					</div>
 				</div>
 			</div>
-		</div>
-	</header>
-	<div class="welcome">
-		<!-- <div class="background"> -->
-		<!-- <h1 class="">OVERLAY TEXT</h1> -->
+		</header>
+		<div class="welcome">
+			<i class="logo fade-in one"></i>
+			<h1 class="fade-in two">Hello <strong>World</strong></h1>
+			<p class="fade-in three" "text"><strong>I</strong> am <strong>Farishta Haider</strong>
+				<!-- <div class="intro">
+				<h2>
 
-		<i class="logo fade-in one"></i>
-		<h1 class="fade-in two">Hello <strong>World</strong></h1>
-		<p class="fade-in three" "text"><strong>I</strong> am <strong>Farishta Haider</strong>
-			<!-- </div> -->
-			<!-- <div class="intro">
-			<h2>
+				<span class="rotate-words">
+				<span class="rotate-in active">web development.</span>
+				<span class="rotate-out">tech.</span>
+				<span class="rotate-out">pop culture.</span>
+				<span class="rotate-out">marketing.</span>
+				<span class="rotate-out">music.</span>
+				<span class="rotate-out">social media.</span>
+			</span>
+		</h2>
+	</div> -->
 
-			<span class="rotate-words">
-			<span class="rotate-in active">web development.</span>
-			<span class="rotate-out">tech.</span>
-			<span class="rotate-out">pop culture.</span>
-			<span class="rotate-out">marketing.</span>
-			<span class="rotate-out">music.</span>
-			<span class="rotate-out">social media.</span>
-		</span>
-	</h2>
-</div> -->
-<!-- Take a look at some of my works, and if you like them, feel free to <strong>contact me</strong>.<br> Let’s create something <strong>WOW!</strong></p> -->
-<p><a href="#portfolio" class="button fade-in four">View My Works</a></p>
-<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i></div>
+	<p><a href="#portfolio" class="button fade-in four">Welcome to me</a></p>
+	<div class="scroll-down clear"><i class="fa fa-angle-double-down animated infinite bounce"></i>
+	</div>
 </div>
 </section>
 <section id="about">
 	<div class="bg-image"></div>
 	<div class="holder">
-		<div class="title scrollflow -slide-top -opacity"><h2>About</h2></div>
+		<div class="title scrollflow -slide-top -opacity">
+			<h2>About</h2>
+		</div>
 		<div id="tabs-container">
 			<ul class="tabs-menu title scrollflow -slide-top -opacity">
-				<li class="current"><a href="#about">About Me</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
-				<li><a href="#resume">Resume</a></li>
+				<li class="current"><a href="#bio">About Me</a></li>
+				<li><a href="#skills">Skills</a></li>
+				<li><a href="#experience">Experience</a></li>
 			</ul>
 			<div class="tab">
 				<aside class="bio tab-content scrollflow -slide-right -opacity" id="bio" >
 					<p>I'm Farishta Haider <strong>Full-Stack Developer</strong>. <blockquote>A creative web developer on a journey down the code laden road. My passion to solve problems and take on new challenges are equipped with the thirst for knowledge and finding solutions in and outside of the box. My outgoing personality, experience and vast skillsets assist my adaptability on this exciting journey.</blockquote></p>
 
-					<div class="links scrollflow"><a href="resume" target="_blank" class="button"><i class="fa fa-download"></i> Download</a>
-						<a href="mailto:farishta.haider@gmail.com" class="button"><i class="fa fa-paper-plane"></i> Hire Me</a></div>
-					</aside>
-						<aside>
+					<div class="links scrollflow"><a href="resume" target="_blank" class="button"><i class="fa fa-download"></i> Download Resume</a>
+						<a href="mailto:farishta.haider@gmail.com" class="button">
+							<i class="fa fa-paper-plane"></i>
+							Hire Me
+						</a>
+					</div>
+					<div class="headerimg"></div>
+				</aside>
+			</div>
+		</div>
+	</div>
 
-
-<div class="headerimg"></div>
-</aside>
+	<aside class="skills tab-content" id="skills">
+		<div class="meter">
+			<span>Photoshop</span>
+			<div class="photoshop" data-icon="100%"></div>
+		</div>
+		<div class="meter">
+			<span>Illustrator</span>
+			<div class="illustrator" data-icon="90%"></div>
+		</div>
+	</aside>
+	<aside class="experience tab-content" id="experience">
+		<div class="row">
+			<div class="logo danat"><div>
+				<div class="brief">
+					<span class"company-name">FRISH CO</span>
+					<span class"position">FRISH CO</span>
+				</div>
+			</div>
+		</aside>
+	</div>
+</div>
+</div>
+</section>
+<section id="portfolio">
+	<div class="holder">
+		<div id="to-work"></div>
+		<div class="title scrollflow -slide-top -opacity">
+			<h2>Portfolio</h2>
+		</div>
+		<div id="trivia" class="work_item">
+			<div class="slide_container">
+				<div class="portfolio_description">
+					<h3> Project 1 - Trivia Night </h3>
+					<p> Javascript</p>
+					<div class="close_work"><div></div></div>
+					<div class="prev_work" id="trivia_prev"><div></div></div>
+					<div class="next_work" id="trivia_next"><div></div></div>
+				</div>
+				<div class="image_container_M">
+					<img src="http://i.imgur.com/0JgJmIjh.png" width="725" alt="Trivia Night Game">
 				</div>
 			</div>
 		</div>
-	</section>
-	<section id="portfolio">
-		<div class="holder">
-			<div class="title scrollflow -slide-top -opacity"><h2>Portfolio</h2></div>
-		</br>
-		<a href="http://lafrish.github.io/Trivia_Night/"><img src="http://i.imgur.com/0JgJmIjh.png" alt="Trivia Night Game"></a>
+		<!-- <a href="http://lafrish.github.io/Trivia_Night/"><img src="http://i.imgur.com/0JgJmIjh.png" alt="Trivia Night Game"></a>
 		<a href="http://cheerie.herokuapp.com/"><img src="http://i.imgur.com/pT8gS04h.png" alt="Cheerie App"></a>
 		<a href="https://icare-volunteer-app.herokuapp.com/"><img src="http://i.imgur.com/c4aHeqdh.jpg" alt="iCare App"></a>
 		<a href=""><img src="http://i.imgur.com/hqWOJhwh.png" alt="Node Beach House"></a>
-<a href="https://wdi8-yearbook.herokuapp.com/"><img src="http://www.educationpost.com.hk/sites/default/files/images/logo/institution/1ga_logo.jpg" alt="General Assembly's WDI 8 Yearbook"></a>
+		<a href="https://wdi8-yearbook.herokuapp.com/"><img src="http://www.educationpost.com.hk/sites/default/files/images/logo/institution/1ga_logo.jpg" alt="General Assembly's WDI 8 Yearbook"></a> -->
 
 
-	</section>
-
-</br>
+	</br>
 </section>
-</br>
+
 <section id="resume">
 	<div class="holder">
 		<div class="title scrollflow -slide-top -opacity"><h2>Resume</h2></div>
 	</br>
 </br>
-<div class="wrapper">
-  <div class="timeline"></div>
-  <div class="momentscontainer">
-    <div class="moment right">
-      <div class="date">
-        <h4>January 2014</h4>
-      </div>
-      <h2 class="name">Name of Significant Event in Time</h2>
-      <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique commodi labore, mostiae! Rem error, magni ut molestias fuga nemo.</p>
-    </div>
-    <div class="moment left">
-      <div class="date">
-        <h4>February 2014</h4>
-      </div>
-      <h2 class="name">Name of Significant Event in Time</h2>
-      <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique commodi labore, mostiae! Rem error, magni ut molestias fuga nemo.</p>
-    </div>
-    <div class="moment right">
-      <div class="date">
-        <h4>March 2014</h4>
-      </div>
-      <h2 class="name">Name of Significant Event in Time</h2>
-      <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique commodi labore, mostiae! Rem error, magni ut molestias fuga nemo.</p>
-    </div>
-    <div class="moment left">
-      <div class="date">
-        <h4>April 2014</h4>
-      </div>
-      <h2 class="name">Name of Significant Event in Time</h2>
-      <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique commodi labore, mostiae! Rem error, magni ut molestias fuga nemo.</p>
-    </div>
-    <div class="moment right">
-      <div class="date">
-        <h4>May 2014</h4>
-      </div>
-      <h2 class="name">Name of Significant Event in Time</h2>
-      <p class="desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique commodi labore, mostiae! Rem error, magni ut molestias fuga nemo.</p>
-    </div>
-  </div>
-</div>
+<div id='app-container'>
+	<div id='app-picturebox'>
+		<div class='app-picture' id='app-picture1'>
+			<img src='http://i.imgur.com/0JgJmIjh.png'>
+			<div class='app-pictureinfo' id='app-pictureinfo1' onclick=''>1<span>basics</span></div>
+		</div>
+		<div class='app-picturedet' id='app-picturedet1' onclick=''>
+			Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium sequi nesciunt. <p> Neque porro quisquam est, qui dolorem ipsum quia dolor consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? <p> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et distinctio. <p> Nam libero tempore, cum soluta nobis est eligendi optio voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+			</div> <!-- #app-picturedet1 -->
+			<div class='app-picture' id='app-picture2' onclick=''>
+				<img src='http://i.imgur.com/pT8gS04h.png'>
+				<div class='app-pictureinfo' id='app-pictureinfo2' onclick=''>2<span>livelihood</span></div>
+			</div>
+			<div class='app-picturedet' id='app-picturedet2' onclick=''>
+				<h3>1981</h3> Sed ut perspiciatis unde omnis iste natus error sit voluptatem consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+				<br><h3>1999</h3> Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore pariatur?
+				<br><h3>2011</h3> At vero eos et accusamus et iusto odio dignissimos ducimus qui rerum facilis est et expedita distinctio.
+				<br><h3>2014</h3> Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+			</div> <!-- #app-picturedet2 -->
+			<div class='app-picture' id='app-picture3'>
+				<img src='http://i.imgur.com/c4aHeqdh.jpg'>
+				<div class='app-pictureinfo' id='app-pictureinfo3' onclick=''>3<span>relationships</span></div>
+			</div>
+			<div class='app-picturedet' id='app-picturedet3' onclick=''>
+				<h3>1981</h3> Sed ut perspiciatis unde omnis iste natus error sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+				<br><h3>1999</h3> Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+				<br><h3>2011</h3> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti expedita distinctio.
+				<br><h3>2014</h3> Nam libero tempore, cum soluta nobis est eligendi delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+			</div> <!-- #app-picturedet3 -->
+			<div class='app-picture' id='app-picture4'>
+				<img src='http://i.imgur.com/hqWOJhwh.png'>
+				<div class='app-pictureinfo' id='app-pictureinfo4' onclick=''>4<span>timeline</span></div>
+			</div>
+			<div class='app-picturedet' id='app-picturedet4' onclick=''>
+				<h3>1981</h3> Sed ut perspiciatis unde omnis iste natus error sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+				<br><h3>1999</h3> Neque porro quisquam est, qui dolorem ipsum quia dolor nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+				<br><h3>2011</h3> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti expedita distinctio.
+				<br><h3>2014</h3> Nam libero tempore, cum soluta nobis est eligendi perferendis doloribus asperiores repellat.
+			</div> <!-- #app-picturedet4 -->
+		</div>
+		<div class='clearfix'></div> <!-- clears floats for the menu links -->
 
+	</div>
 </section>
 <section id="contactMe">
 	<div class="holder">
 		<div class="title scrollflow -slide-top -opacity"><h2>Contact Me</h2></div>
-
-
 		<div class="contact-info">
 			<div class="mail"><a href="mailto:farishta.haider@gmail.com" title="farishta.haider@gmail.com"><i class="fa fa-envelope"></i> farishta.haider@gmail.com</a></div>
 			<div class="tel"><i class="fa fa-mobile"></i> <strong> 301 - 509 - 2483</strong></div>
@@ -184,15 +202,13 @@
 		<div class="copy">© Copyright 2016 Farishta Haider Portfolio</div>
 	</div>
 </section>
-<footer></footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="/javascript/typekit.js"></script>
-<script type="text/javascript" src="/javascript/modernizr.custom.js"></script>
-<script type="text/javascript" src="/javascript/script.js"></script>
+<script type="text/javascript" src="javascripts/modernizr.custom.js"></script>
+<script type="text/javascript" src="javascripts/script.js"></script>
 <script type="text/javascript" src="javascripts/html5shiv-printshiv.js"></script>
 <script type="text/javascript" src="javascripts/jquery.js"></script>
-<script src="javascripts/jquery.scrollflow.min.js"></script>
+<script type="text/javascript" src="javascripts/jquery.scrollflow.min.js"></script>
 <script type="text/javascript" src="javascripts/jquery.easing.1.3.js"></script>
-<script src="javascripts/jquery.bxslider.min.js"></script>
+<script type="text/javascript" src="javascripts/jquery.bxslider.min.js"></script>
 </body>
 </html>
